[package]
name = "guach"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.27.0"
env_logger = "0.11.3"
log = "0.4.21"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
